# rust-gpu-driver

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build-zip.sh  release.sh
.github/workflows/: ci.yml  release.yml
examples/: shader.rs
shaders/: example.rs  shader.rs
src/: arguments.rs  build.rs  consts.rs  main.rs  manifest.rs  platform.rs  rust-gpu-revision.txt  rustproject.rs
