[package]
name = "rust-gpu-driver"
version = "0.20.0"
edition = "2021"
rust-version = "1.75"
authors = ["Fredrik Fornwall <fredrik@fornwall.net>"]
description = "CLI driver for rust-gpu"
homepage = "https://github.com/fornwall/rust-gpu-driver"
documentation = "https://github.com/fornwall/rust-gpu-driver"
repository = "https://github.com/fornwall/rust-gpu-driver"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["graphics", "shaders", "rust-gpu", "spir-v"]
categories = ["graphics"]

exclude = [
    ".github",
    "target"
]

[dependencies]
clap = { version = "4", features = ["string"] }
dirs = "5"
env_logger = "0.10"
log = "0.4"
pulldown-cmark = "0.9"
regex = "1"
sha1 = "0.10"
shell-words = "1"
tempfile = "3"
toml = "0.8"
serde = "1"
serde_json = "1"
rustc_codegen_spirv-types = { git = "https://github.com/EmbarkStudios/rust-gpu" }

# paths = { git = "https://github.com/rust-lang/rust-analyzer.git", tag = "2024-02-05" }
# project-model = { git = "https://github.com/rust-lang/rust-analyzer.git", tag = "2024-02-05" }
# base-db = { git = "https://github.com/rust-lang/rust-analyzer.git", tag = "2024-02-05" }
# cfg = { git = "https://github.com/rust-lang/rust-analyzer.git", tag = "2024-02-05" }
# vfs = { git = "https://github.com/rust-lang/rust-analyzer.git", tag = "2024-02-05" }

[target.'cfg(unix)'.dependencies]
is-terminal = "0.4.6"

[dev-dependencies]
lazy_static = "1"
scan-rules = "0.2"

[profile.release]
lto = true
